--- a/Recipedia/RecipeSearcher/templates/login.html
+++ b/Recipedia/RecipeSearcher/templates/login.html
@@ -4,41 +4,10 @@
     <div class="container">
         <class class=>
             <h4>Login Information</h4>
-            <form action="#">
-                <div class="row">
-                    <div class="col-lg-8 col-md-6">
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div class="checkout__input">
-                                    <p>Fist Name<span>*</span></p>
-                                    <input type="text">
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="checkout__input">
-                                    <p>Last Name<span>*</span></p>
-                                    <input type="text">
-                                </div>
-                            </div>
-                        </div>
-                        <div class="checkout__input">
-                            <p>Username<span>*</span></p>
-                            <input type="text">
-                        </div>
-                        <div class="checkout__input">
-                            <p>Password<span>*</span></p>
-                            <input type="text">
-                        </div>
-
-                        <div class="checkout__input">
-                            <p>Email<span>*</span></p>
-                            <input type="text">
-                        </div>
-                        <button type="submit" class="site-btn">CREATE ACCOUNT</button>
-
-                    </div>
-                   
-                </div>
+             <form  text-align:center ; method="post">
+                {{ form.as_p }}
+                {% csrf_token %}
+                 <p><input type="submit" value="Log in"></p>
             </form>
         </div>
     </div>
