--- a/Recipedia/RecipeSearcher/templates/base.html
+++ b/Recipedia/RecipeSearcher/templates/base.html
@@ -54,7 +54,7 @@
                 </ul>
             </div>
             <div class="header__top__right__auth">
-                <a href="./login"><i class="fa fa-user"></i> Login</a>
+                <a href="/RecipeSearcher/login"><i class="fa fa-user"></i> Login</a>
             </div>
         </div>
         <nav class="humberger__menu__nav mobile-menu">
@@ -109,7 +109,7 @@
                                 <a href="#"><i class="fa fa-pinterest-p"></i></a>
                             </div>
                             <div class="header__top__right__auth">
-                                <a href="./login"><i class="fa fa-user"></i> Login</a>
+                                <a href="/RecipeSearcher/login"><i class="fa fa-user"></i> Login</a>
                             </div>
                         </div>
                     </div>
