index page shows users name if user is logged in. Users can edit their profiles and add pics

--- a/Recipedia/RecipeSearcher/templates/userlogin.html
+++ b/Recipedia/RecipeSearcher/templates/userlogin.html
@@ -12,7 +12,8 @@
                         <div class="row justify-content-md-center">
                             <div class="col-md-6">
                                 <div class="checkout__input">
-                                    <p>Username
+                                    <p>
+                                        Username
                                         <span>*</span>
                                     </p>
                                     {{ form.username }}
@@ -22,7 +23,8 @@
                         <div class="row justify-content-md-center">
                             <div class="col-lg-6">
                                 <div class="checkout__input">
-                                    <p>Password
+                                    <p>
+                                        Password
                                         <span>*</span>
                                     </p>
                                     {{ form.password }}
@@ -32,6 +34,9 @@
                         </div>
                         <div class="row justify-content-md-center">
                             <p><input type="submit" class="site-btn" value="Log in"></p>
+                        </div>
+                        <div class="row justify-content-md-center">
+                            <a href="/RecipeSearcher/register/" class="site-btn">Create account</a>
                         </div>
                     </div>
                 </div>
