--- a/Recipedia/RecipeSearcher/templates/edit.html
+++ b/Recipedia/RecipeSearcher/templates/edit.html
@@ -1,50 +1,24 @@
 {% extends 'base.html' %}
 {% load static %}
+
 {% block content %}
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-<link rel="stylesheet" href="{% static 'css/profile.css' %}" type="text/css">
+<div>
+    {% include "editprofileheader.html" %}
+</div>
+
+<!-- begin profile-content -->
 <div class="container">
-    <div class="row">
-        <div class="col-md-12">
-            <div id="content" class="content content-full-width">
-                <!-- begin profile -->
-                <div class="profile">
-                    <div class="profile-header">
-                        <!-- BEGIN profile-header-cover -->
-                        <div class="profile-header-cover"></div>
-                        <!-- END profile-header-cover -->
-                        <!-- BEGIN profile-header-content -->
-                        <div class="profile-header-content">
-                            <!-- BEGIN profile-header-img -->
-                            <div class="profile-header-img">
-                                <img src="https://bootdey.com/img/Content/avatar/avatar3.png" alt="">
-                            </div>
-                            <!-- END profile-header-img -->
-                            <!-- BEGIN profile-header-info -->
-                            <div class="profile-header-info">
-                                <h4 class="m-t-10 m-b-5">{{searchedUser.first_name}}</h4>
-                                <p class="m-b-10">UXUI + Frontend Developer</p>
-                                <a href="#" class="btn btn-sm btn-info mb-2">Edit Profile</a>
-                            </div>
-                            <!-- END profile-header-info -->
-                        </div>
-                        <!-- END profile-header-content -->
-                        <!-- BEGIN profile-header-tab -->
-                        <ul class="profile-header-tab nav nav-tabs">
-                            <li class="nav-item"><a href="#profile-post" class="nav-link active show" data-toggle="tab">POSTS</a></li>
-                            <li class="nav-item"><a href="#profile-about" class="nav-link" data-toggle="tab">ABOUT</a></li>
-                            <li class="nav-item"><a href="#profile-photos" class="nav-link" data-toggle="tab">PHOTOS</a></li>
-                            <li class="nav-item"><a href='RecipeSearcher/edit' class="nav-link" data-toggle="tab">EDIT</a></li>
-                            <li class="nav-item"><a href="#profile-friends" class="nav-link" data-toggle="tab">FRIENDS</a></li>
-                        </ul>
-                        <!-- END profile-header-tab -->
-                    </div>
+    <div class="row justify-content-md-center">
+        <div class="col-md-auto">
+            <form method="post" enctype="multipart/form-data">
+                {{user_form.as_p}}
+                {{profile_form.as_p}}
+                {% csrf_token %}
+                <div class="row justify-content-md-center">
+                <p><input type="submit" class="site-btn" value="Save changes"></p>
                 </div>
-                <!-- end profile -->
-                <!-- begin profile-content -->
-                
-                <!-- end profile-content -->
-            </div>
+            </form>
+            <!-- end profile-content -->
         </div>
     </div>
 </div>
