--- a/Recipedia/RecipeSearcher/templates/register.html
+++ b/Recipedia/RecipeSearcher/templates/register.html
@@ -48,10 +48,12 @@
                         </div>
                         <div class="col-md-6">
                             <div class="checkout__input">
-                                <p>Repeat Password
+                                <p>
+                                    Repeat Password
                                     <span>*</span>
                                 </p>
                                 {{ user_form.password2}}
+                                {% csrf_token %}
                             </div>
                         </div>
                     </div>
@@ -64,5 +66,5 @@
     </div>
 </div>
 </section>    
-    {% csrf_token %}
+
  {% endblock %}
