Profile page now works even if user has not uploaded profile picture. A default pp will be displayed.

--- a/Recipedia/RecipeSearcher/templates/profileheader.html
+++ b/Recipedia/RecipeSearcher/templates/profileheader.html
@@ -17,7 +17,11 @@
                         <div class="profile-header-content">
                             <!-- BEGIN profile-header-img -->
                             <div class="profile-header-img">
-                                <img src={{searchedUser.profile.photo.url}} alt="">
+                                {% if searchedUser.profile.photo%}
+                                <img src= {{searchedUser.profile.photo.url}}  alt="">
+                                {% else %}
+                                <img src="{% static 'img/blog/default_profile.jpg' %}"  alt="">
+                                {% endif %}
                             </div>
                             <!-- END profile-header-img -->
                             <!-- BEGIN profile-header-info -->
