--- a/Recipedia/RecipeSearcher/templates/profile/edit.html
+++ b/Recipedia/RecipeSearcher/templates/profile/edit.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div>
-    {% include "editprofileheader.html" %}
+    {% include "profile/editprofileheader.html" %}
 </div>
 
 <!-- begin profile-content -->
