--- a/Recipedia/RecipediaPost/templates/postlist.html
+++ b/Recipedia/RecipediaPost/templates/postlist.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
    {% block content %}
 <h1>My Blog</h1>
+
+<a href=/Blog/create_post>
+    click here to create a new blog post
+</a>
      {% for post in posts %}
 <h2>
     <a href={{ post.get_absolute_url }}>
