--- a/Recipedia/RecipediaPost/templates/postdetail.html
+++ b/Recipedia/RecipediaPost/templates/postdetail.html
@@ -1,11 +1,48 @@
 {% extends 'base.html' %}
    {% block content %}
+
+
 <h1>{{ post.title }}</h1>
+
 <p class="date">
     Published {{ post.publish }} by {{ post.author }}
 </p>
+
 {% if post.photo%}
 <img src={{post.photo.url}} alt="">
 {% endif %}
 {{ post.body|linebreaks }}
+
+<!-- Section to display total number of comments  -->
+{% with comments.count as total_comments %}
+<h2>
+    {{ total_comments }} comment{{ total_comments|pluralize }}
+</h2>
+{% endwith %}
+<!-- end section-->
+<!-- Section to display all comments under the post or none if post has no comments yet -->
+{% for comment in comments %}
+<div class="comment">
+    <p class="info">
+        Comment {{ forloop.counter }} by <a href={{comment.user.get_absolute_url}}>{{ comment.user.username }}</a>
+        {{ comment.created }}
+    </p>
+    {{ comment.body|linebreaks }}
+</div>
+{% empty %}
+<p>There are no comments yet.</p>
+{% endfor %}
+<!-- end section -->
+<!-- Section to display the form to create a new comment -->
+{% if new_comment %}
+<h2>Your comment has been added.</h2>
+{% else %}
+<h2>Add a new comment</h2>
+<form method="post">
+    {{ comment_form.as_p }}
+    {% csrf_token %}
+    <p><input type="submit" value="Add comment"></p>
+</form>
+{% endif %}
+<!-- end section -->
   {% endblock %}
