--- a/Recipedia/RecipediaPost/templates/base.html
+++ b/Recipedia/RecipediaPost/templates/base.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <div id="content">
+    <label for="Post" class="form-label">Example label</label>
+    <input type="text" class="form-control" id="Post" placeholder="Example input placeholder">
         {% block content %}
         {% endblock %}
     </div>
