--- a/Recipedia/RecipeSearcher/templates/base.html
+++ b/Recipedia/RecipeSearcher/templates/base.html
@@ -30,7 +30,7 @@
         <div class="loader"></div>
     </div>
 
-    
+
     <!-- Header Section Begin -->
     <header class="header">
         <div class="header__top">
@@ -72,24 +72,6 @@
                         <a href="/"><img src="{% static 'img/logo.png' %}" alt=""></a>
                     </div>
                 </div>
-                <div class="col-lg-6">
-                    <nav class="header__menu">
-                        <ul>
-                            <li class="active"><a href="/RecipeSearcher/">Home</a></li>
-                            <li><a href="./shop-grid.html">Shop</a></li>
-                            <li><a href="#">Pages</a>
-                                <ul class="header__menu__dropdown">
-                                    <li><a href="./shop-details.html">Shop Details</a></li>
-                                    <li><a href="./shoping-cart.html">Shoping Cart</a></li>
-                                    <li><a href="./checkout.html">Check Out</a></li>
-                                    <li><a href="./blog-details.html">Blog Details</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="/Blog">Blog</a></li>
-                            <li><a href="./contact.html">Contact</a></li>
-                        </ul>
-                    </nav>
-                </div>
                 <div class="col-lg-3">
                     <div class="header__cart">
                         <ul>
@@ -122,9 +104,8 @@
                             <a href="./"><img src="{% static 'img/logo.png' %}" alt=""></a>
                         </div>
                         <ul>
-                            <li>Address: 60-49 Road 11378 New York</li>
-                            <li>Phone: +65 11.188.888</li>
-                            <li>Email: hello@colorlib.com</li>
+                            <li>Address: 1 Washington Sq, San Jose, CA</li>
+                            <li>Computer - Software Engineering Department</li>
                         </ul>
                     </div>
                 </div>
