--- a/Recipedia/RecipeSearcher/templates/base.html
+++ b/Recipedia/RecipeSearcher/templates/base.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;600;900&display=swap" rel="stylesheet">
 
     <!-- Css Styles -->
-    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" type="text/css">
+    <link rel="stylesheet" href="{% static '/css/bootstrap.min.css' %}" type="text/css">
     <link rel="stylesheet" href="{% static 'css/font-awesome.min.css' %}" type="text/css">
     <link rel="stylesheet" href="{% static 'css/elegant-icons.css' %}" type="text/css">
     <link rel="stylesheet" href="{% static 'css/nice-select.css' %}" type="text/css">
@@ -40,7 +40,9 @@
                     <div class="col-lg-6 col-md-6">
                         <div class="header__top__left">
                             <ul>
-                                <li><i class="fa fa-envelope"></i> Recipedia</li>
+                               
+                                   <a href="/"><img src="{% static 'img/logo.png' %}" style='height:50px;' alt=""></a>
+ 
                             </ul>
                         </div>
                     </div>
@@ -52,11 +54,14 @@
                                 <a href="#"><i class="fa fa-linkedin"></i></a>
                                 <a href="#"><i class="fa fa-pinterest-p"></i></a>
                             </div>
-                            <div class="header__top__right__auth">
+                            <div class="header__top__right__language">
                                 {% if request.user.is_authenticated %}
                                 Hello, {{ request.user.first_name }}
-                                <a href="/RecipeSearcher/{{request.user.username}}">profile</a>
-                                <a href="/RecipeSearcher/logout">Logout</a>
+                                <span class="arrow_carrot-down"></span>
+                                <ul>
+                                    <li><a href="/RecipeSearcher/{{request.user.username}}" ">profile</a></li>
+                                    <li><a href="/RecipeSearcher/logout">Logout</a></li>
+                                </ul>
                                 {% else %}
                                 <a href="/RecipeSearcher/login"><i class="fa fa-user"></i> Login</a>
                                 {% endif %}
@@ -67,41 +72,16 @@
             </div>
         </div>
         <div class="container">
-            <div class="row">
-                <div class="col-lg-3">
-                    <div class="header__logo">
-                        <a href="/"><img src="{% static 'img/logo.png' %}" alt=""></a>
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <nav class="header__menu">
+            <div class="row justify-content-md-center">
+                <div class="col-md-auto">
+                    <nav class="header__menu ">
                         <ul>
                             <li class="active"><a href="/RecipeSearcher/">Home</a></li>
-                            <li><a href="./shop-grid.html">Shop</a></li>
-                            <li>
-                                <a href="#">Pages</a>
-                                <ul class="header__menu__dropdown">
-                                    <li><a href="./shop-details.html">Shop Details</a></li>
-                                    <li><a href="./shoping-cart.html">Shoping Cart</a></li>
-                                    <li><a href="./checkout.html">Check Out</a></li>
-                                    <li><a href="./blog-details.html">Blog Details</a></li>
-                                </ul>
-                            </li>
                             <li><a href="/Blog">Blog</a></li>
-                            <li><a href="./contact.html">Contact</a></li>
+                            <li><a href="/Blog/feed">Blog Feed</a></li>
                         </ul>
                     </nav>
                 </div>
-                <div class="col-lg-3">
-                    <div class="header__cart">
-                        <ul>
-                            <li><a href="#"><i class="fa fa-heart"></i> <span>3</span></a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="humberger__open">
-                <i class="fa fa-bars"></i>
             </div>
         </div>
     </header>
