--- a/Recipedia/RecipeSearcher/templates/userlogin.html
+++ b/Recipedia/RecipeSearcher/templates/userlogin.html
@@ -1,7 +1,21 @@
-{% extends 'base.html' %} {% load static %} {% block content %}
-<!-- Checkout Section Begin -->
+{% extends 'base.html' %}
+{% load static %} {% block content %}
+
+<div class="container">
+    <div class="row justify-content-md-center">
+        <div>
+            <div class="alert alert-light alert-dismissible fade show" role="alert">
+                <strong>Login to use all our sites features!</strong> Blog, Blog feed and other functions are only available to registered users.
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
 <section class="checkout spad">
     <div class="container">
+
         <div class="checkout__form">
             <form method="post">
                 <div class="row justify-content-md-center">
