Fixed issues with logout page and added ability for users to see their followers and who they are following.

--- a/Recipedia/RecipeSearcher/templates/profile/editprofileheader.html
+++ b/Recipedia/RecipeSearcher/templates/profile/editprofileheader.html
@@ -42,7 +42,8 @@
                         <!-- BEGIN profile-header-tab -->
                         <ul class="profile-header-tab nav nav-tabs">
                             <li class="nav-item"><a href="/RecipeSearcher/{{request.user.username}}/" class="nav-link active show">POSTS</a></li>
-                            <li class="nav-item"><a href="/RecipeSearcher/{{request.user.username}}/followers" class="nav-link">FRIENDS</a></li>
+                            <li class="nav-item"><a href="/RecipeSearcher/{{user.username}}/followers" class="nav-link">Followers</a></li>
+                            <li class="nav-item"><a href="/RecipeSearcher/{{user.username}}/following" class="nav-link">Following</a></li>
                         </ul>
                         <!-- END profile-header-tab -->
                     </div>
