--- a/Recipedia/RecipeSearcher/templates/profile/profile.html
+++ b/Recipedia/RecipeSearcher/templates/profile/profile.html
@@ -53,7 +53,8 @@
                         <!-- BEGIN profile-header-tab -->
                         <ul class="profile-header-tab nav nav-tabs">
                             <li class="nav-item"><a href="/RecipeSearcher/{{user.username}}" class="nav-link">POSTS</a></li>
-                            <li class="nav-item"><a href="/RecipeSearcher/{{user.username}}/followers" class="nav-link">FRIENDS</a></li>
+                            <li class="nav-item"><a href="/RecipeSearcher/{{user.username}}/followers" class="nav-link">Followers</a></li>
+                            <li class="nav-item"><a href="/RecipeSearcher/{{user.username}}/following" class="nav-link">Following</a></li>
                         </ul>
                         <!-- END profile-header-tab -->
                     </div>
