--- a/Recipedia/RecipeSearcher/templates/registration/logged_out.html
+++ b/Recipedia/RecipeSearcher/templates/registration/logged_out.html
@@ -1,9 +1,19 @@
 {% extends "base.html" %}
-<h4>Logged out</h4>
+{%load static%}
 {% block content %}
-<h1>Logged out</h1>
-<p>
-    You have been successfully logged out.
-    You can <a href="/RecipeSearcher/login">log-in again</a>.
-</p>
+<div class="'container">
+    <div class="row justify-content-md-center">
+        <div class="col col-md-auto">
+            <h1>Logged out</h1>
+            <p>
+                You have been successfully logged out.
+            </p>
+        </div>
+    </div>
+    <div class="row justify-content-md-center">
+        <div class="col col-md-auto">
+            <a class="btn btn-primary btn-lg" href='{% url "RecipeSearcher:login" %}'>log-in again</a>
+        </div>
+    </div>
+</div>
 {% endblock %}
