--- a/Recipedia/RecipeSearcher/templates/index.html
+++ b/Recipedia/RecipeSearcher/templates/index.html
@@ -9,14 +9,11 @@
                 <div class="col-lg-9">
                     <div class="hero__search">
                         <div class="hero__search__form">
-                            <form method="post">
-                                <div class="hero__search__categories">
-                                    All Categories
-                                    <span class="arrow_carrot-down"></span>
-                                </div>
-                                <input type="text" placeholder="What do you need?">
-                                
-                                <button type="submit" class="site-btn">SEARCH</button>
+                            <form method="POST">
+                                {{ form.keyword }}
+                                {% csrf_token %}
+                                <input type="text" name="keyword" placeholder="Enter ingredients"/>
+                                <button type="submit" name="button">Search</button>
                             </form>
                         </div>
                     </div>
