--- a/Recipedia/RecipeSearcher/templates/index.html
+++ b/Recipedia/RecipeSearcher/templates/index.html
@@ -19,6 +19,13 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-lg-12">
+                  <div class="results">
+                      {{ urls }}
+                  </div>
+                </div>
+            </div>
         </div>
     </section>
     <!-- Hero Section End -->
