--- a/Recipedia/RecipediaPost/templates/postdetail.html
+++ b/Recipedia/RecipediaPost/templates/postdetail.html
@@ -1,8 +1,28 @@
 {% extends 'base.html' %}
-   {% block content %}
+{%load static%}
+{% block content %}
 
 
 <h1>{{ post.title }}</h1>
+{% with total_likes=post.users_like.count users_like=post.users_like.all %}
+<div class="image-info">
+    <div>
+        <span class="count">
+            <span class="total">{{ total_likes }}</span>
+            like{{ total_likes|pluralize }}
+        </span>
+        <a href="" data-id="{{ post.id }}" data-action="{% if request.user in users_like %}un{% endif %}like"
+           class="like button">
+            {% if request.user not in users_like %}
+            Like
+            {% else %}
+            Unlike
+            {% endif %}
+        </a>
+    </div>
+</div>
+{% endwith %}
+
 
 <p class="date">
     Published {{ post.publish }} by {{ post.author }}
@@ -45,4 +65,33 @@
 </form>
 {% endif %}
 <!-- end section -->
-  {% endblock %}
+{% endblock %}
+
+{% block domready  %}
+$('a.like').click(function(e){
+e.preventDefault();
+$.post('{% url "Blog:like" %}',
+{
+id: $(this).data('id'),
+action: $(this).data('action')
+},
+function(data){
+if (data['status'] == 'ok')
+{
+var previous_action = $('a.like').data('action');
+// toggle data-action
+$('a.like').data('action', previous_action == 'like' ?
+'unlike' : 'like');
+// toggle link text
+$('a.like').text(previous_action == 'like' ? 'Unlike' :
+'Like');
+// update total likes
+var previous_likes = parseInt($('span.count .total').
+text());
+$('span.count .total').text(previous_action == 'like' ?
+previous_likes + 1 : previous_likes - 1);
+}
+}
+);
+});
+{% endblock %}
