--- a/Recipedia/RecipeSearcher/templates/index.html
+++ b/Recipedia/RecipeSearcher/templates/index.html
@@ -9,8 +9,7 @@
                 <div class="col-lg-9">
                     <div class="hero__search">
                         <div class="hero__search__form">
-                            <form method="POST">
-                                {{ form.keyword }}
+                            <form method="POST" action="/RecipeSearcher/results/">
                                 {% csrf_token %}
                                 <input type="text" name="keyword" placeholder="Enter ingredients"/>
                                 <button type="submit" name="button">Search</button>
@@ -22,12 +21,16 @@
             <div class="row">
                 <div class="col-lg-12">
                   <div class="results">
-                      {{ urls }}
+                    {% for url in urls %}
+                      <li><a href="{{ url }}">{{ url }}</a></li>
+
+                    {% endfor %}
                   </div>
                 </div>
             </div>
         </div>
     </section>
+    <!-- Hero Section End -->
     <!-- Hero Section End -->
 
     <!-- Blog Section Begin -->
