--- a/Recipedia/RecipeSearcher/templates/index.html
+++ b/Recipedia/RecipeSearcher/templates/index.html
@@ -9,7 +9,7 @@
                 <div class="col-lg-9">
                     <div class="hero__search">
                         <div class="hero__search__form">
-                            <form method="POST" action="/RecipeSearcher/results/">
+                            <form method="POST">
                                 {% csrf_token %}
                                 <input type="text" name="keyword" placeholder="Enter ingredients"/>
                                 <button type="submit" name="button">Search</button>
@@ -18,16 +18,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-12">
-                  <div class="results">
-                    {% for url in urls %}
-                      <li><a href="{{ url }}">{{ url }}</a></li>
 
-                    {% endfor %}
-                  </div>
-                </div>
-            </div>
         </div>
     </section>
     <!-- Hero Section End -->
