--- a/Recipedia/RecipeSearcher/templates/results.html
+++ b/Recipedia/RecipeSearcher/templates/results.html
@@ -7,11 +7,23 @@
     <div class="container">
       <div class="row">
           <div class="col-lg-12">
+              <div class="section-title from-blog__title">
+                  <h1>Search Results</h1>
+              </div>
+          </div>
+      </div>
+      <div class="row">
+          <div class="col-lg-4 col-md-4 col-sm-6">
             <div class="results">
               {% for url in urls %}
+                <div class="blog__item__pic">
+                    <img src="{{ image }}" alt="">
+                </div>
+                <div class="blog__item__text">
 
-                  <li><a href="{{ url }}">{{ url }}</a></li>
+                    <h3><a href="{{ url }}">{{ dish_name }}</a></h3>
 
+                </div>
               {% endfor %}
             </div>
           </div>
