--- a/Recipedia/RecipeSearcher/templates/results.html
+++ b/Recipedia/RecipeSearcher/templates/results.html
@@ -15,13 +15,13 @@
       <div class="row">
           <div class="col-lg-4 col-md-4 col-sm-6">
             <div class="results">
-              {% for url in urls %}
+              {% for item in cont %}
                 <div class="blog__item__pic">
-                    <img src="{{ image }}" alt="">
+                    <img src="{{ item.image }}" alt="">
                 </div>
                 <div class="blog__item__text">
 
-                    <h3><a href="{{ url }}">{{ dish_name }}</a></h3>
+                    <h3><a href="{{ item.url }}">{{ item.dish_name }}</a></h3>
 
                 </div>
               {% endfor %}
