--- a/Recipedia/RecipediaPost/templates/create_post.html
+++ b/Recipedia/RecipediaPost/templates/create_post.html
@@ -23,7 +23,7 @@
                 </div>
 
                 <div class="row justify-content-md-center">
-                    <div class="form-group">
+                    <div class="form-group col-lg-12">
                         <label for="exampleFormControlTextarea1">Body of your post</label>
                         {{form.body}}
                     </div>
