--- a/Recipedia/RecipeSearcher/templates/index.html
+++ b/Recipedia/RecipeSearcher/templates/index.html
@@ -2,86 +2,79 @@
 {% load static %}
 
 {% block content %}
-    <!-- Hero Section Begin -->
-    <section class="hero">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-9">
-                    <div class="hero__search">
-                        <div class="hero__search__form">
-                            <form method="POST">
-                                {% csrf_token %}
-                                <input type="text" name="keyword" placeholder="Enter ingredients"/>
-                                <button type="submit" name="button">Search</button>
-                            </form>
+<section class="hero">
+    <form method="POST">
+        {% csrf_token %}
+        <div class='container-fluid'>
+            <div class='row justify-content-center'>
+                <div class="col mr-4 ls-4">
+                    <div class="jumbotron bg-cover" style="background-image: linear-gradient(to bottom, rgba(255,255,255,0.6) 0%,rgba(255,255,255,0.9) 0%), url(/static/img/hero/home-banner.jfif)">
+                        <div class="container">
+                            <h1 class="display-4">Search for recipes based on what you have at home!</h1>
+                            <p class="lead">Use the labels to filter recipes to your liking</p>
                         </div>
                     </div>
                 </div>
             </div>
-
-        </div>
-    </section>
-    <!-- Hero Section End -->
-    <!-- Hero Section End -->
-
-    <!-- Blog Section Begin -->
-    <section class="from-blog spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="section-title from-blog__title">
-                        <h2>From The Blog</h2>
-                    </div>
-                </div>
             </div>
-            <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-6">
-                    <div class="blog__item">
-                        <div class="blog__item__pic">
-                            <img src="{% static 'img/blog/blog-1.jpg' %}" alt="">
-                        </div>
-                        <div class="blog__item__text">
-                            <ul>
-                                <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
-                                <li><i class="fa fa-comment-o"></i> 5</li>
+            <div class='row justify-content'>
+                <div class='col- mx-4'>
+                    <div class='row'>
+                        <div class='col-sm'>
+                            <div class='row justify-content-md-center'><h3>{{search_form.DietLabels.label}}</h3></div>
+                            <ul class='list-group list-group-flush'>
+                                {%for checkbox in search_form.DietLabels%}
+                                <li class='list-group-item list-group-item-action'>{{checkbox}}</li>
+                                {%endfor%}
                             </ul>
-                            <h5><a href="#">Cooking tips make cooking simple</a></h5>
-                            <p>Sed quia non numquam modi tempora indunt ut labore et dolore magnam aliquam quaerat </p>
+                        </div>
+                        <div class='col-sm'>
+                            <div class='row justify-content-md-center'><h3>{{search_form.HealthLabels.label}}</h3></div>
+                            <div style='overflow:auto;height: 440px'>
+                                <ul class='list-group list-group-flush'>
+                                    {%for checkbox in search_form.HealthLabels%}
+                                    <li class='list-group-item list-group-item-action'>{{checkbox}}</li>
+                                    {%endfor%}
+                                </ul>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-4 col-md-4 col-sm-6">
-                    <div class="blog__item">
-                        <div class="blog__item__pic">
-                            <img src="{% static 'img/blog/blog-2.jpg' %}" alt="">
+                    <div class='row justify-content-md-center'>
+                        {{search_form.calories.label}}
+                        {{search_form.calories}}
+                        <p><span id="demo"></span> cals</p>
+                    </div>
+                    <div class='row justify-content-md-center'>
+                        <div class='form-outline'>
+                            {{search_form.maxNumberOfIngredients}}
                         </div>
-                        <div class="blog__item__text">
-                            <ul>
-                                <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
-                                <li><i class="fa fa-comment-o"></i> 5</li>
-                            </ul>
-                            <h5><a href="#">6 ways to prepare breakfast for 30</a></h5>
-                            <p>Sed quia non numquam modi tempora indunt ut labore et dolore magnam aliquam quaerat </p>
-                        </div>
+
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 col-sm-6">
-                    <div class="blog__item">
-                        <div class="blog__item__pic">
-                            <img src="{% static 'img/blog/blog-3.jpg' %}" alt="">
-                        </div>
-                        <div class="blog__item__text">
-                            <ul>
-                                <li><i class="fa fa-calendar-o"></i> May 4,2019</li>
-                                <li><i class="fa fa-comment-o"></i> 5</li>
-                            </ul>
-                            <h5><a href="#">Visit the clean farm in the US</a></h5>
-                            <p>Sed quia non numquam modi tempora indunt ut labore et dolore magnam aliquam quaerat </p>
+                <div class='col-lg-9 mx-4'>
+                    <div class='row'>
+                        <div class='input-group'>
+                            <div class='input-group-prepend'> <span class='input-group-text icon_search'></span></div>
+                            {{search_form.keyword}}<button class="btn" type="submit" name="button">Search</button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
-    <!-- Blog Section End -->
+        
+    </form>
+
+    <script>
+        var slider = document.getElementById("myRange");
+        var output = document.getElementById("demo");
+        output.innerHTML = slider.value;
+
+        slider.oninput = function () {
+            output.innerHTML = this.value;
+        }
+    </script>
+
+</section>
+<!-- Hero Section End -->
+<!-- Hero Section End -->
 {% endblock %}
