--- a/Recipedia/RecipeSearcher/templates/profile/followers_list.html
+++ b/Recipedia/RecipeSearcher/templates/profile/followers_list.html
@@ -68,28 +68,61 @@
 
 
 {%for f in user.followers.all%}
-<div class="container">
-    <div class="row">
-        <div class="col-md-8">
-            <div class="people-nearby">
-
-                <div class="nearby-user">
-                    <div class="row">
-                        <div class="col-md-2 col-sm-2">
-                            <img src={{f.profile.photo.url}} alt="user" class="profile-photo-lg">
-                        </div>
-                        <div class="col-md-7 col-sm-7">
-                            <h5><a href="/RecipeSearcher/{{f.username}}" class="profile-link">{{f.username}}</a></h5>
-                            <p>{{f.profile.bio}}</p>
-                        </div>
-                        <div class="col-md-3 col-sm-3">
-                        </div>
-                    </div>
+<div class="container my-2 d-flex justify-content-center">
+    <div class="card p-3">
+        <div class="d-flex align-items-center">
+            <div class="image"> <img src={{f.profile.photo.url}} class="rounded" width="155"> </div>
+            <div class="ml-3 w-100">
+                <h4 class="mb-0 mt-0"><a href="/RecipeSearcher/{{f.username}}" class="profile-link">{{f.username}}</a></h4> <span>{{f.profile.bio}}</span>
+                <div class="p-2 mt-2 bg-primary d-flex justify-content-between rounded stats">
+                    <div class="d-flex flex-column"> <span class="followers">Followers</span> <span class="number2">{{f.followers.count}}</span> </div>
+                    <div class="d-flex flex-column"> <span class="followers">Following</span> <span class="number2">{{f.following.count}}</span> </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
 {% endfor %}
+<style>
+
+    .card {
+        width: 400px;
+        border: none;
+        border-radius: 10px;
+        background-color: #fff
+    }
+
+    .stats {
+        background: #f2f5f8 !important;
+        color: #000 !important
+    }
+
+    .articles {
+        font-size: 10px;
+        color: #a1aab9
+    }
+
+    .number1 {
+        font-weight: 500
+    }
+
+    .followers {
+        font-size: 10px;
+        color: black
+    }
+
+    .number2 {
+        font-weight: 500
+    }
+
+    .rating {
+        font-size: 10px;
+        color: #a1aab9
+    }
+
+    .number3 {
+        font-weight: 500
+    }
+</style>
 
 {% endblock %}
