--- a/Recipedia/RecipeSearcher/templates/registration/logged_out.html
+++ b/Recipedia/RecipeSearcher/templates/registration/logged_out.html
@@ -1,18 +1,15 @@
-{% extends "base.html" %}
-{%load static%}
+{% extends 'base.html' %}
+{% load static %
 {% block content %}
-<div class="'container">
+<div class="container">
     <div class="row justify-content-md-center">
-        <div class="col col-md-auto">
-            <h1>Logged out</h1>
-            <p>
-                You have been successfully logged out.
-            </p>
+        <div class="col-md-auto">
+            <h2>Sucesfully logged out</h2>
         </div>
     </div>
     <div class="row justify-content-md-center">
-        <div class="col col-md-auto">
-            <a class="btn btn-primary btn-lg" href='{% url "RecipeSearcher:login" %}'>log-in again</a>
+        <div class="col-md-auto">
+            <a class="site-btn" href="{%url 'RecipeSearcher:login'%}"> Log in</a>
         </div>
     </div>
 </div>
