--- a/Recipedia/RecipeSearcher/templates/results.html
+++ b/Recipedia/RecipeSearcher/templates/results.html
@@ -1,35 +1,127 @@
 {% extends 'base.html' %}
 {% load static %}
-
 {% block content %}
-<!-- Result Section Begin -->
-<section class="results">
-    <div class="container">
-      <div class="row">
-          <div class="col-lg-12">
-              <div class="section-title from-blog__title">
-                  <h1>Search Results</h1>
-              </div>
-          </div>
-      </div>
-      <div class="row">
-          <div class="col-lg-4 col-md-4 col-sm-6">
-            <div class="results">
-              {% for item in cont %}
-                <div class="blog__item__pic">
-                    <img src="{{ item.image }}" alt="">
-                </div>
-                <div class="blog__item__text">
 
-                    <h3><a href="{{ item.url }}">{{ item.dish_name }}</a></h3>
-
+<section class="hero">
+    <form method="POST">
+        {% csrf_token %}
+        <div class='container-fluid'>
+            <div class='row justify-content-center'>
+                <div class="col mr-4 ls-4">
+                    <div class="jumbotron bg-cover" style="background-image: linear-gradient(to bottom, rgba(255,255,255,0.6) 0%,rgba(255,255,255,0.9) 0%), url(/static/img/hero/home-banner.jfif)">
+                        <div class="container">
+                            <h1 class="display-4">Search for recipes based on what you have at home!</h1>
+                            <p class="lead">Use the labels to filter recipes to your liking</p>
+                        </div>
+                    </div>
                 </div>
-              {% endfor %}
             </div>
-          </div>
-      </div>
+            <div class='row justify-content'>
+                <div class='col- mx-4'>
+                    <div class='row'>
+                        <div class='col-sm'>
+                            <div class='row justify-content-md-center'><h3>{{search_form.DietLabels.label}}</h3></div>
+                            <ul class='list-group list-group-flush'>
+                                {%for checkbox in search_form.DietLabels%}
+                                <li class='list-group-item list-group-item-action'>{{checkbox}}</li>
+                                {%endfor%}
+                            </ul>
+                        </div>
+                        <div class='col-'>
+                            <div class='row justify-content-md-center'><h3>{{search_form.HealthLabels.label}}</h3></div>
+                            <div style='overflow:auto;height: 440px'>
+                                <ul class='list-group list-group-flush'>
+                                    {%for checkbox in search_form.HealthLabels%}
+                                    <li class='list-group-item list-group-item-action'>{{checkbox}}</li>
+                                    {%endfor%}
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class='row justify-content-md-center'>
+                        {{search_form.calories.label}}
+                        {{search_form.calories}}
+                        <p><span id="demo"></span> cals</p>
+                    </div>
+                    <div class='row justify-content-md-center'>
+                        <div class='form-outline'>
+                            {{search_form.maxNumberOfIngredients}}
+                        </div>
+
+                    </div>
+                </div>
+                <div class='col-8 ml-3'>
+                    <div class='row mb-4 mx-4'>
+                        <div class='input-group'>
+                            <div class='input-group-prepend'> <span class='input-group-text icon_search'></span></div>
+                            {{search_form.keyword}}   <button class="btn" type="submit" name="button">Search</button>
+                        </div>
+                    </div>
+
+                    <div class="row mb-4 mx-4">
+                        <div class="col">
+                            {{hitCount}} Recipe{{hitCount|pluralize}} found
+                        </div>
+                        <div class="col">
+                            Using following labels: <span class="text-capitalize font-weight-bold"> {{dietLabelData}} {{healthLabelData}}</span>
+                        </div>
+                    </div>
+
+                    <div class='row mx-4'>
+                        <div class="row justify-content-md-center">
+                            <div class="card-group">
+                                {%for recipe in recipes%}
+                                <div class="col-lg-4 col-md-6 mb-4">
+                                    <div class="card">
+                                        <img class="card-img-top" src={{recipe.image}} alt="Card image cap">
+                                        <div class="card-body">
+                                            <h5 class="card-title">{{recipe.label}}</h5>
+                                            <button class="btn btn-link btn-sm" type="button" data-toggle="collapse" data-target="#{{recipe.label|slugify}}" aria-expanded="false" aria-controls="multiCollapseExample2">More info</button>
+                                            <div class="col">
+                                                <div class="collapse multi-collapse" id="{{recipe.label|slugify}}">
+                                                    <div class="card card-body">
+                                                        <ul class="list-group list-group-flush">
+                                                            <li class="list-group-item">Cals/serving: {{recipe.calories|floatformat}}</li>
+                                                            <li class="list-group-item">Yield: {{recipe.yield}} servings</li>
+                                                            <li class="list-group-item">Total ingredients: {{recipe.ingredients|length}}</li>
+                                                            <li class="list-group-item"><a href={{recipe.url}}>Link to recipe </a></li>
+                                                            <li class="list-group-item"><a href={{recipe.uri}}>uri </a></li>
+                                                        </ul>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <p class="card-text"><small class="text-muted"><h7><a>From: {{recipe.source}}</a></h7></small></p>
+                                        </div>
+                                    </div>
+                                </div>
+                                {%endfor%}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+
+    <script>
+        var slider = document.getElementById("myRange");
+        var output = document.getElementById("demo");
+        output.innerHTML = slider.value;
+
+        slider.oninput = function () {
+            output.innerHTML = this.value;
+        }
+    </script>
+
+    <div class="product__pagination">
+        {% include "pagination.html" with page=recipes %}
     </div>
+
 </section>
-<!-- Result Section End -->
+
 
 {% endblock %}
+
+
+
+
