--- a/Recipedia/RecipeSearcher/templates/usersearch.html
+++ b/Recipedia/RecipeSearcher/templates/usersearch.html
@@ -2,35 +2,29 @@
 {% load static %}
 {%block content%}
 
-<form action="" method="Post">
-    <div class="container-fluid">
-        <div class="container text-center" id="searchBox">
+<form  method="GET">
+    <div class="container" style="padding-bottom:35%">
+        <div class="row justify-content-lg-center">
             <h1>User search </h1>
+        </div>
+        <div class="row justify-content-lg-center">
             <h6>Enter users username to find their profile </h6>
-            <div class="row">
-
-                <div class="col">
-                    <div class='input-group'>
+        </div>
+            <div class="row justify-content-lg-center">
+                <div class="col col-lg-8 align-items-center">
                         {% csrf_token %}
                         {{profileSearchForm.user}}
-                    </div>
                 </div>
-
-                <div class="col-">
-
-                    <div class="col-">
-                        <button class="btn" type="submit" name="button">Search</button>
-                    </div>
-
+                <div class="col col-sm-auto mb-4 ml-4">
+                    <button class="btn btn-light" type="submit" name="button">Search</button>
                 </div>
-            </div>
-        </div>
+            </div> 
     </div>
 </form>
 
 <style>
     div.nice-select {
-        display: none
+    display:none;
     }
 </style>
 
