--- a/Recipedia/RecipediaPost/templates/feed.html
+++ b/Recipedia/RecipediaPost/templates/feed.html
@@ -3,31 +3,43 @@
 
 
 {%block content%}
-
+{%if posts%}
 {%for post in posts%}
-<div class='container'>
-  <div class = col align-self-start'>  
-    <div class="card">
-      <div class="row g-0">
-        <div class="col">
-            {%if post.photo.url%}
-         <a href={{post.get_absolute_url }}> <img class='img-thumbnail ' style='height:175px; width:225px;' src={{post.photo.url}} alt="Photo unavailable"></a>
-            {%endif%}
-        </div>
-        <div class="col-md-8">
-            <div class="card-body">
-                <div class="row">  <a class=" card-title text-dark " href={{post.get_absolute_url }}><p class='text-uppercase font-weight-bold'>{{post.title}}</p> </a></div>
-                <div class="row"><p class="card-text">{{ post.body|truncatewords:10|linebreaks }}</p></div>
-                <div class="row">
-                    <div class="col"> <a href={{post.author.get_absolute_url}} class="card-text text-muted"><small>By: {{post.author.username}}</small></a></div>
-                    <div class="col-auto"><a class="card-text text-muted"><small>{{post.users_like.count}} Likes</small></a></div>
+<div class='container my-2'>
+    <div class=col align-self-start'>
+        <div class="card">
+            <div class="row g-0">
+                <div class="col mx-1 my-1">
+                    {%if post.photo.url%}
+                    <a href={{post.get_absolute_url }}> <img class='img-thumbnail ' style='height:175px; width:225px;' src={{post.photo.url}} alt="Photo unavailable"></a>
+                    {%endif%}
                 </div>
-                <div class="row"><a class="card-text text-muted"><small>Posted on {{post.publish}}</small></a></div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <div class="row">  <a class=" card-title text-dark " href={{post.get_absolute_url }}><p class='text-uppercase font-weight-bold'>{{post.title}}</p> </a></div>
+                        <div class="row"><p class="card-text">{{ post.body|truncatewords:10|linebreaks }}</p></div>
+                        <div class="row">
+                            <div class="col"> <a href={{post.author.get_absolute_url}} class="card-text text-muted"><small>By: {{post.author.username}}</small></a></div>
+                            <div class="col-auto"><a class="card-text text-muted"><small>{{post.users_like.count}} Likes</small></a></div>
+                        </div>
+                        <div class="row"><a class="card-text text-muted"><small>Posted on {{post.publish}}</small></a></div>
+                    </div>
+                </div>
             </div>
         </div>
-      </div>
     </div>
-  </div>
 </div>
 {%endfor%}
+{%else%}
+<div class="container" style="padding-bottom:35%">
+    <div class="row justify-content-center">
+        <div class="col ">
+            <div class="alert alert-info" role="alert">
+                no posts to show
+            </div>
+        </div>
+    </div>
+</div>
+{%endif%}
+
 {% endblock %}
