--- a/Recipedia/RecipediaPost/templates/postlist.html
+++ b/Recipedia/RecipediaPost/templates/postlist.html
@@ -1,16 +1,20 @@
 {% extends "base.html" %}
    {% block content %}
-<h1>My Blog</h1>
-
-<a href=/Blog/create_post>
-    click here to create a new blog post
-</a>
-{% for post in posts %}
-<div class='container'>
+<div class="container">
+    <div class="row justify-content-center">
+        <h1>{{request.user.username|title}}'s Posts</h1>
+    </div>
+    <div class="row justify-content-center mb-3">
+        <a href=/Blog/create_post class="btn btn-success"> click here to create a new blog post</a>
+    </div>
+</div>
+{%if posts%}
+<div class='container' style="padding-bottom:10%">
     <div class=col align-self-start'>
-        <div class="card">
+        {% for post in posts %}
+        <div class="card  my-2">
             <div class="row g-0">
-                <div class="col">
+                <div class="col mx-1 my-1">
                     {%if post.photo%}
                     <a href={{post.get_absolute_url }}> <img class='img-thumbnail ' style='height:175px; width:225px;' src={{post.photo.url}} alt="Photo unavailable"></a>
                     {%endif%}
@@ -23,12 +27,23 @@
                             <div class="col"> <a href={{post.author.get_absolute_url}} class="card-text text-muted"><small>By: {{post.author.username}}</small></a></div>
                             <div class="col-auto"><a class="card-text text-muted"><small>{{post.users_like.count}} Likes</small></a></div>
                         </div>
-                        <div class="row"><a class="card-text text-muted"><small>Posted on {{post.publish}}</small></a></div>
+                        <div class="row"><a class="card-text text-muted"><small>Posted on {{post.publish|date:'F d Y'}}</small></a></div>
                     </div>
                 </div>
             </div>
         </div>
+        {% endfor %}
     </div>
 </div>
-{% endfor %}
+{%else%}
+<div class="container" style="padding-bottom:35%">
+    <div class="row justify-content-center">
+        <div class="col ">
+            <div class="alert alert-info" role="alert">
+                no posts to show
+            </div>
+        </div>
+    </div>
+</div>
+{%endif%}
 {% endblock %}
